correct section about me; delete .container and change for more understanding; change row-gap in main grid in index.html and style.css; update suivi_projet.md

--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,7 @@ body {
   background-color: #fff;
 }
 
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
+section {}
 
 a {
   text-decoration: none;
@@ -78,10 +73,6 @@ p {
   line-height: 1.2;
 }
 
-.nav-page {
-  min-height: 300px;
-}
-
 /* ============================================================
   2. LAYOUT
   ------------------------------------------------------------
@@ -96,13 +87,13 @@ p {
     ".        header    header    v-nav"
     "social-m banner    banner    v-nav"
     ".        about     about     v-nav"
-    ".        know-me   skills    v-nav"
     ".        projects  projects  v-nav"
     ".        contact   contact   v-nav"
     ".        footer    footer    v-nav";
   grid-template-columns: 1fr 4fr 4fr 1fr;
   position: relative;
-  gap: 1.618vw;
+  column-gap: 1.618vw;
+  row-gap: 5rem;
 }
 
 /* MAIN HEADER --------- */
@@ -130,6 +121,14 @@ p {
 }
 
 /* SECTION FLOW -------- */
+.l-main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+}
+
+
 .l-banner {
   grid-area: banner;
 }
@@ -138,28 +137,37 @@ p {
   grid-area: about;
 }
 
+.l-about-me__content {
+  display: flex;
+}
+
+.l-about-me__container {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
 .l-knowing-me {
   grid-area: know-me;
+  flex: 1;
 }
 
 .l-my-skills {
   grid-area: skills;
+  flex: 1;
 }
 
 .l-projects {
   grid-area: projects;
-  height: 50px;
 }
 
 .l-contact {
   grid-area: contact;
-  height: 50px;
 }
 
 /* FOOTER --------------- */
 .l-footer {
   grid-area: footer;
-  height: 50px;
 }
 
 
@@ -261,12 +269,13 @@ p {
   text-transform: uppercase;
   font-weight: 300;
 }
+
 /* -----------------------------
-  3.20 Hey 
+  3.20 Banner Hey 
   ------------------------------ */
 
 /* banner-title */
-  .banner-title {
+.banner-title {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -275,9 +284,7 @@ p {
   margin-top: 16.18vw;
 }
 
-.banner-title__title {
-
-}
+.banner-title__title {}
 
 .banner-title__divider {
   height: 0.3rem;
@@ -308,87 +315,69 @@ p {
 /* 3.21 Social media vertical banner
    ------------------------------ */
 
-  .vertical-banner {
-    border: solid 2px var(--color-secondary);
-    border-radius: 0px var(--radius) var(--radius) 0px;
-    width: 50px;
-    position: sticky;
-    top: 50vh;
-    transform: translateY(-50%);
-    
-  }
+.vertical-banner {
+  border: solid 2px var(--color-secondary);
+  border-radius: 0px var(--radius) var(--radius) 0px;
+  width: 50px;
+  position: sticky;
+  top: 50vh;
+  transform: translateY(-50%);
 
-  .social-media-bar ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    list-style: none;
-    margin: 1rem 0;
-  }
+}
 
-  i.fa-brands {
-    font-size: 1.5rem;
-    color: var(--color-secondary);
-  }
+.social-media-bar ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  list-style: none;
+  margin: 1rem 0;
+}
+
+i.fa-brands {
+  font-size: 1.5rem;
+  color: var(--color-secondary);
+}
 
 
 /* vertical navigation banner
   ------------------------------ */
 
-
-  .vertical-nav__container {
-    border: solid 1px var(--color-primary);
-    width: 30px;
-    height: 50vh;
-    position: fixed;
-    top: 50hv;
-    transform: translateY(50%);
-    border-radius: var(--radius) 0 0 var(--radius);
-   }
-
-  .vertical-nav {
-    height: 100%;
-  }
-
-  .vertical-nav__list-items {
-    display: flex;
-    height: inherit;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-  }  
-
-
-   .vertical-nav__item {
-    list-style: none;
-  }
-
-  .vertical-nav__point {
-    background-color: var(--color-secondary);
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-  }
-  
-/* -------------- 
-  3.30 About me
---------------- */
-
-
-.container {
-  margin: calc(2*1.618vw) 0;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  gap: calc(1.618*2vw);
+.vertical-nav__container {
+  border: solid 1px var(--color-primary);
+  width: 30px;
+  height: 50vh;
+  position: fixed;
+  top: 50hv;
+  transform: translateY(50%);
+  border-radius: var(--radius) 0 0 var(--radius);
 }
 
-/* 3.31 Knowing me
-   --------------- */
+.vertical-nav {
+  height: 100%;
+}
+
+.vertical-nav__list-items {
+  display: flex;
+  height: inherit;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
 
 
-/* 3.32 Skills
+.vertical-nav__item {
+  list-style: none;
+}
+
+.vertical-nav__point {
+  background-color: var(--color-secondary);
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+}
+
+/* 3.32 Skills-list
   ------------ */
 .skills-list {
   display: flex;
@@ -397,7 +386,7 @@ p {
   flex-wrap: wrap;
 }
 
-.skill-item {
+.skill-list__item {
   padding: 1rem;
   margin: 0.5rem;
   border-radius: var(--radius);
@@ -486,6 +475,7 @@ p {
 .u-text-center {
   text-align: center;
 }
+
 .u-align-self-center {
   align-self: center;
 }
